--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,18 +11,24 @@
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "peerjs": "^1.2.0",
+    "lodash.sortby": "^4.7.0",
+    "milligram": "^1.3.0",
+    "normalize.css": "^8.0.1",
+    "pkijs": "^2.1.88",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "reset-css": "^5.0.1",
+    "typeface-roboto": "0.0.75",
+    "typescript": "^3.7.5",
+    "unique-names-generator": "^4.2.0",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "peer-server": "peerjs --port 9000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +46,9 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.sortby": "^4.7.6",
+    "@types/reach__router": "^1.3.5",
+    "@types/uuid": "^8.0.0",
     "peer": "^0.5.3"
   }
 }
