--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash.sortby": "^4.7.0",
     "milligram": "^1.3.0",
     "normalize.css": "^8.0.1",
+    "peerjs": "^1.2.0",
     "pkijs": "^2.1.88",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,13 +23,15 @@
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.5",
     "unique-names-generator": "^4.2.0",
+    "use-onclickoutside": "^0.3.1",
     "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "peer-server": "peerjs --port 9000"
   },
   "eslintConfig": {
     "extends": "react-app"
