--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "peer-server": "peerjs --port 9000"
+    "peer-server": "peerjs --port 9000 --key shout --allow_discovery"
   },
   "eslintConfig": {
     "extends": "react-app"
