--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash.difference": "^4.5.6",
+    "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.uniq": "^4.5.6",
     "@types/node": "^12.12.42",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "lodash.difference": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.sortby": "^4.7.0",
+    "lodash.uniq": "^4.5.0",
     "milligram": "^1.3.0",
     "normalize.css": "^8.0.1",
     "peerjs": "^1.2.0",
